--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,30 +1,26 @@
-<div id="dashboard" class="container">
-  <div class="header">
-    <h1>Estadísticas</h1>
-  </div>
-  <div class="body">
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Requests</th>
-          <th scope="col">Success</th>
-          <th scope="col">Error</th>
-          <th scope="col">Rate limit</th>
-          <th scope="col">Duration (ms)</th>
-          <th scope="col">Date</th>
-        </tr>
-      </thead>
-        <tbody>
-        <tr *ngFor="let statistic of statistics; index as i">
-          <th scope="row">{{i + 1}}</th>
-          <td>{{statistic.total}}</td>
-          <td>{{statistic.success}}</td>
-          <td>{{statistic.error}}</td>
-          <td>{{statistic.rateLimit}}</td>
-          <td>{{statistic.duration}}</td>
-          <td>{{statistic.date | date : 'short' }}</td>
-        </tr>
-    </table>
+<div id="dashboard">
+  <div class="dashboard-body">
+    <div *ngIf="statistics.length !== 0" class="card">
+      <h5 class="card-title">Requests per hour</h5>
+      <div class="card-body">
+        <ngx-charts-line-chart
+          [view]="[1000, 500]"
+          [scheme]="{ domain: ['#3483fa', '#abfa5f', '#fa461f', '#fab708'] }"
+          [results]="data"
+          [gradient]="false"
+          [xAxis]="true"
+          [yAxis]="true"
+          [legend]="true"
+          [showXAxisLabel]="true"
+          [showYAxisLabel]="true"
+          [xAxisLabel]="'Time'"
+          [yAxisLabel]="'Requests'"
+          [timeline]="false">
+        </ngx-charts-line-chart>
+      </div>
+    </div>
+    <div class="no-statistics" *ngIf="statistics.length === 0">
+      <div class="title">At the moment there are no statistics!</div>
+    </div>
   </div>
 </div>
