--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,12 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+@import "scss/_nav.scss";
+@import "scss/_table.scss";
+
 body {
   font-family: 'Roboto', sans-serif;
   background: #e7e7e7;
 }
 
 .container {
-  font-size: 1rem;
-  max-width: 800px;
-  padding: 0 20px 20px;
-  margin: 0 auto;
+  margin-top: 40px;
+}
+
+.no-statistics {
+  min-height: 483px;
+  width: 100%;
+  height: 100%;
+  background-color: #e2e2e2;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .title {
+    font-weight: 100;
+    color: #333;
+  }
 }
